--- a/heartbit/ios/Runner/Info.plist
+++ b/heartbit/ios/Runner/Info.plist
@@ -51,5 +51,7 @@
 	<string>We need photo library access to select profile photos</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>We need permission to save photos to your library</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>HeartBit uses your location to show the distance between you and your partner</string>
 </dict>
 </plist>
