--- a/heartbit/pubspec.yaml
+++ b/heartbit/pubspec.yaml
@@ -35,7 +35,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   shared_preferences: ^2.3.2
-  image_picker: ^1.0.7
+  image_picker: ^1.1.2
   permission_handler: ^11.3.0
   
   # UI
@@ -45,6 +45,10 @@ dependencies:
   lottie: ^3.1.0
   confetti: ^0.8.0
   flutter_card_swiper: ^7.2.0
+  location: ^6.0.2
+  flutter_staggered_grid_view: ^0.7.0
+  google_fonts: ^6.2.1
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
