--- a/heartbit/firebase.json
+++ b/heartbit/firebase.json
@@ -13,5 +13,11 @@
     "functions": {
         "source": "functions",
         "runtime": "nodejs18"
+    },
+    "firestore": {
+        "rules": "firestore.rules"
+    },
+    "storage": {
+        "rules": "storage.rules"
     }
 }
