--- a/heartbit/.gitignore
+++ b/heartbit/.gitignore
@@ -41,3 +41,16 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# Local cleanup artifacts
+build_error_log.txt
+build_log.txt
+analysis_log.txt
+analysis_output.txt
+analysis_results.txt
+analyze_output.txt
+analyze_final.txt
+test_output.txt
+flutter_*.log
+Cormorant.zip
+nul
